project edits, finished adding almost everything in.

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -20,85 +20,84 @@
     <main>
         <section class="projects-section">
             <h2>Data Science</h2>
-            <div class="projects-grid">
-                <div class="project-item">
-                    <img src="path/to/thumbnail1.jpg" alt="SCC Thumbnail">
-                    <h3>SCC Grid Search Optimization </h3>
-                    <p>Collaborated with a team to optimize SimplyCellCounter (SCC) for automated cell quantification. Using grid search in Python, we fine-tuned parameters and improved accuracy across diverse datasets. Our work attempted to streamline SCC’s usability by addressing variability in tissue and image quality, and gave us insights on further refinements. </p>
-                    <p>Note: Being reworked for documentation.</p>
-                </div>
-                <div class="project-item">
-                    <img src="path/to/thumbnail2.jpg" alt="Alzheimer's Thumbnail">
-                    <h3>Alzheimer's Research Project</h3>
-                    <p>Performed demographic data analysis on Alzheimer's disease prevalence and demographic disparities using Python, pandas, and matplotlib. Developed data cleaning and visualization skills while working with large healthcare datasets from the CDC, demonstrating proficiency in exploratory data analysis and statistical modeling for public health research.</p>
-                    <p>Note: Being reworked for documentation.</p>
-                </div>
-                <div class="project-item">
-                    <img src="path/to/thumbnail3.jpg" alt="Data Viz Thumbnail">
-                    <h3>Dashboard Creation </h3>
-                    <p>Project showcasing data visualization principles and methods on a -- dataset to derive insights.</p>
-                    <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
-                </div>
-                <div class="project-item">
-                    <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
-                    <h3>Machine Learning Models</h3>
-                    <p>A repository of common ML models on a stroke dataset, includes regression, clustering, classification, pca and svm.</p>
-                    <p>Note: In progress</p>
-                    <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
+            <div class="projects-container">
+                <div class="projects-grid" id="data-science">
+                    <div class="project-item">
+                        <h3>SCC Grid Search Optimization</h3>
+                        <p>Collaborated with a team to optimize SimplyCellCounter (SCC) for automated cell quantification. Using grid search in Python, we fine-tuned parameters and improved accuracy across diverse datasets. Our work attempted to streamline SCC’s usability by addressing variability in tissue and image quality, and gave us insights on further refinements.</p>
+                        <p>Note: Being reworked for documentation.</p>
+                    </div>
+                    <div class="project-item">
+                        <h3>Alzheimer's Research Project</h3>
+                        <p>Performed demographic data analysis on Alzheimer's disease prevalence and demographic disparities using Python, pandas, and matplotlib. Developed data cleaning and visualization skills while working with large healthcare datasets from the CDC, demonstrating proficiency in exploratory data analysis and statistical modeling for public health research.</p>
+                        <p>Note: Being reworked for documentation.</p>
+                    </div>
+                    <div class="project-item">
+                        <h3>Dashboard Creation</h3>
+                        <p>Developing an interactive dashboard to analyze online learning trends across multiple platforms, exploring relationships between course ratings, pricing strategies, and content characteristics. This project demonstrates my skills in data transformation and visual storytelling using Tableau and D3.js.</p>
+                        <p>Note: In Progress.</p>
+                    </div>
+                    <div class="project-item">
+                        <h3>Machine Learning Models</h3>
+                        <p>A comprehensive machine learning repository demonstrating practical applications of regression, clustering, classification, PCA, and SVM techniques on stroke prediction data, providing insights into risk factors while showcasing implementation of multiple analytical approaches.</p>
+                        <p>Note: In Progress.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="projects-section">
             <h2>UX/UI</h2>
-            <div class="projects-grid">
-                <div class="project-item">
-                    <img src="Sustainable.png" style="width:5em; height:8em;" alt="Bangladesh sustainability Thumbnail">
-                    <h3>Sustainable Technology Solutions</h3>
-                    <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
-                    <a href="Final Presentation.pdf" target="_blank">Presentation</a>
-                </div>
-                <div class="project-item">
-                    <img src="notion.jpg" alt="Degree Navigator Thumbnail">
-                    <h3>Degree Navigator</h3>
-                    <p>Interactive college credit planner created in Notion. Allows you to track your courses, credits, and progress across 4 years for your major or minor with comprehensive view, customizable fields and more. Gained 350+ downloads and 8 five-star reviews.</p>
-                    <a href="https://kgubbala.notion.site/Degree-Navigator-15d01a3e6800800884f9e86cea0d125d?pvs=4" target="_blank">Notion Template</a>
-                </div>
-                <div class="project-item">
-                    <img src="Cox3 mockup.jpg" style="width:15em; height:9em;" alt="Mockup">
-                    <h3>Co-x3 Product Mockups</h3>
-                    <p>Created polished product demos for a non-profit’s e-commerce site, enhancing brand identity and visual appeal. Conducted market research, staged products for compelling demo images, and designed multiple mockup options in Figma.</p>
-                    <a href="https://www.figma.com/design/A51bcSYu5AVwh0SaaIO2Cl/Design-Ideas?node-id=0-1&t=SznbBGgSlKm2r5wX-1" target="_blank">Figma</a>
-                </div>
-                <div class="project-item">
-                    <img src="e-commerce.png" style="width:15em; height:9em;" alt="e-commerce thumbnail">
-                    <h3>Co-x3 E-commerce Website</h3>
-                    <p>Assisted in designing and developing an e-commerce platform on Zoho Commerce to showcase products and support revenue generation for a non-profit. Contributed to enhancing interactivity by working with custom code and refining the user experience.</p>
-                    <a href="https://shop.x3.family/" target="_blank">Link to Website</a>
+            <div class="projects-container">
+                <div class="projects-grid" id="ux-ui">
+                    <div class="project-item">
+                        <img src="Sustainable.png" style="width:5em; height:8em;" alt="Bangladesh sustainability Thumbnail">
+                        <h3>Sustainable Technology Solutions</h3>
+                        <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
+                        <a href="Final Presentation.pdf" target="_blank">Presentation</a>
+                    </div>
+                    <div class="project-item">
+                        <img src="notion.jpg" alt="Degree Navigator Thumbnail">
+                        <h3>Degree Navigator</h3>
+                        <p>Interactive college credit planner created in Notion. Allows you to track your courses, credits, and progress across 4 years for your major or minor with comprehensive view, customizable fields and more. Gained 350+ downloads and 8 five-star reviews.</p>
+                        <a href="https://kgubbala.notion.site/Degree-Navigator-15d01a3e6800800884f9e86cea0d125d?pvs=4" target="_blank">Notion Template</a>
+                    </div>
+                    <div class="project-item">
+                        <img src="Cox3 mockup.jpg" alt="Mockup">
+                        <h3>Co-x3 Product Mockups</h3>
+                        <p>Created polished product demos for a non-profit’s e-commerce site, enhancing brand identity and visual appeal. Conducted market research, staged products for compelling demo images, and designed multiple mockup options in Figma.</p>
+                        <a href="https://www.figma.com/design/A51bcSYu5AVwh0SaaIO2Cl/Design-Ideas?node-id=0-1&t=SznbBGgSlKm2r5wX-1" target="_blank">Figma</a>
+                    </div>
+                    <div class="project-item">
+                        <img src="e-commerce.png" alt="e-commerce thumbnail">
+                        <h3>Co-x3 E-commerce Website</h3>
+                        <p>Assisted in designing and developing an e-commerce platform on Zoho Commerce to showcase products and support revenue generation for a non-profit. Contributed to enhancing interactivity by working with custom code and refining the user experience.</p>
+                        <a href="https://shop.x3.family/" target="_blank">Link to Website</a>
+                    </div>
+                    <div class="project-item">
+                        <img src="Access card.png" style="width:5em; height:8em;" alt="e-commerce thumbnail">
+                        <h3>Spartan One</h3>
+                        <p>Collaborated on digitizing MSU student IDs via a mobile app, enabling NFC/RFID-based campus access. Worked with university personnel to gather technical details and developed a Figma prototype with features like temporary keycard requests.</p>
+                        <a href="https://www.figma.com/design/8BWMaJa0QovACrQak6Vur1/ESHP-491---Spartan-One?node-id=1-15&t=YznklpzxTpB6hhSE-1" target="_blank">Figma</a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="projects-section">
             <h2>Web Development</h2>
-            <div class="projects-grid">
-                <div class="project-item">
-                    <img src="path/to/thumbnail7.jpg" alt="Project 7 Thumbnail">
-                    <h3>Project 7</h3>
-                    <p>A brief description of the web technologies used.</p>
-                    <a href="https://github.com/yourprofile/project7" target="_blank">GitHub</a>
-                </div>
-                <div class="project-item">
-                    <img src="path/to/thumbnail8.jpg" alt="Project 8 Thumbnail">
-                    <h3>Project 8</h3>
-                    <p>Web development techniques applied in Project 8.</p>
-                    <a href="https://github.com/yourprofile/project8" target="_blank">GitHub</a>
-                </div>
-                <div class="project-item">
-                    <img src="path/to/thumbnail9.jpg" alt="Project 9 Thumbnail">
-                    <h3>Project 9</h3>
-                    <p>Optimization and performance improvements in Project 9.</p>
-                    <a href="https://github.com/yourprofile/project9" target="_blank">GitHub</a>
+            <div class="projects-container">
+                <div class="projects-grid" id="web-development">
+                    <div class="project-item">
+                        <img src="LockedIn.png" alt="LockedIn Thumbnail">
+                        <h3>LockedIn</h3>
+                        <p>LockedIn is a web application designed to help students find study partners and collaborators based on their academic interests, availability, and profiles. By connecting students with similar needs, LockedIn aims to foster collaboration and improve the learning experience in a university environment.</p>
+                    </div>
+                    <div class="project-item">
+                        <img src="maizeplanner.png" alt="maizeplanner Thumbnail">
+                        <h3>Maize Planner</h3>
+                        <p>MaizePlanner is a user-friendly schedule-building tool for University of Michigan students, designed to offer a more visually appealing and intuitive alternative to Wolverine Access and Atlas. Built with the MERN stack (MongoDB, Express, React, Node.js), it features semester selection, course search, and a dynamic visualized schedule, making class planning simpler and more organized.</p>
+                    </div>
                 </div>
             </div>
         </section>
