project description added + image

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -33,9 +33,11 @@
                         <p>Note: Being reworked for documentation.</p>
                     </div>
                     <div class="project-item">
-                        <h3>Dashboard Creation</h3>
-                        <p>Developing an interactive dashboard to analyze online learning trends across multiple platforms, exploring relationships between course ratings, pricing strategies, and content characteristics. This project demonstrates my skills in data transformation and visual storytelling using Tableau and D3.js.</p>
-                        <p>Note: In Progress.</p>
+                        <img src="Coursera_plot.png" style="width:15em; height: 10pxem;" alt="Coursera Thumbnail">
+                        <h3>Coursera Data Analytics</h3>
+                        <p>Analyzed and visualized complex datasets using Pandas, NumPy, Matplotlib, Seaborn, and Plotly, while addressing data quality challenges like missing values and subdomain misclassification. Highlights data cleaning, EDA, and creating accessible, insightful visualizations to uncover trends.</p>
+                        <p>Note: Plots will also be turned into a Tableau dashboard.</p>
+                        <a href="https://github.com/Saikeertanagubbala/online-course-analysis" target="_blank">GitHub</a>
                     </div>
                     <div class="project-item">
                         <h3>Machine Learning Models</h3>
