--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -53,7 +53,7 @@
             <div class="projects-container">
                 <div class="projects-grid" id="ux-ui">
                     <div class="project-item">
-                        <img src="Sustainable.png" style="width:5em; height:8em;" alt="Bangladesh sustainability Thumbnail">
+                        <img src="Sustainable.png" style="width:5em; height:10em;" alt="Bangladesh sustainability Thumbnail">
                         <h3>Sustainable Technology Solutions</h3>
                         <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
                         <a href="Final Presentation.pdf" target="_blank">Presentation</a>
@@ -61,7 +61,7 @@
                     <div class="project-item">
                         <img src="notion.jpg" alt="Degree Navigator Thumbnail">
                         <h3>Degree Navigator</h3>
-                        <p>Interactive college credit planner created in Notion. Allows you to track your courses, credits, and progress across 4 years for your major or minor with comprehensive view, customizable fields and more. Gained <strong>450+ downloads</strong> and 12 five-star reviews.</p>
+                        <p>Interactive college credit planner created in Notion. Allows you to track your courses, credits, and progress across 4 years for your major or minor with comprehensive view, customizable fields and more. Gained <strong>500+ downloads</strong> and 15 five-star reviews.</p>
                         <a href="https://kgubbala.notion.site/Degree-Navigator-15d01a3e6800800884f9e86cea0d125d?pvs=4" target="_blank">Notion Template</a>
                     </div>
                     <div class="project-item">
@@ -77,10 +77,16 @@
                         <a href="https://shop.x3.family/" target="_blank">Link to Website</a>
                     </div>
                     <div class="project-item">
-                        <img src="Access card.png" style="width:5em; height:8em;" alt="e-commerce thumbnail">
+                        <img src="Access card.png" style="width:5em; height:10em;" alt="e-commerce thumbnail">
                         <h3>Spartan One</h3>
                         <p>Collaborated on digitizing MSU student IDs via a mobile app, enabling NFC/RFID-based campus access. Worked with university personnel to gather technical details and developed a Figma prototype with features like temporary keycard requests.</p>
                         <a href="https://www.figma.com/design/8BWMaJa0QovACrQak6Vur1/ESHP-491---Spartan-One?node-id=1-15&t=YznklpzxTpB6hhSE-1" target="_blank">Figma</a>
+                    </div>
+                    <div class="project-item">
+                        <img src="Athlead.png" style="width:5em; height:10em;" alt="Athlead thumbnail">
+                        <h3>Athlead</h3>
+                        <p>Athlead is a mobile platform that streamlines the college recruiting process by connecting high school athletes directly with coaches while providing performance stats and academic metrics to simplify college sports recruitment.</p>
+                        <a href="https://www.figma.com/proto/9IlDpUtA0psIEB6IyUyAqT/Athlead?node-id=0-1&t=3z7RUV6k1CIDFzRu-1" target="_blank">Figma Prototype</a>
                     </div>
                 </div>
             </div>
@@ -95,6 +101,11 @@
                         <h3>Polaroid Camera Creation</h3>
                         <p>Part of a project in Advanced Web Development class that challenged students to recreate complex imagery using pure HTML/CSS/JavaScript, implementing responsive design principles through Eleventy static site generator and establishing a continuous deployment with Netlify.</p>
                         <a href="https://polaroid-camera-creation.netlify.app/" target="_blank">Link</a>
+                    </div>
+                    <div class="project-item">
+                        <h3>C++ Image Processing CLI Tool</h3>
+                        <p>Developed a C++ command-line image processing tool that applies transformations like grayscale, blur, and compression to .ppm images using vector operations and file handling.</p>
+                        <a href="https://github.com/Saikeertanagubbala/ppm-converter" target="_blank">Github</a>
                     </div>
                     <div class="project-item">
                         <img src="LockedIn.png" style="width:15em; height:10em;" alt="LockedIn Thumbnail">
