new projects added

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -36,14 +36,19 @@
                         <img src="Coursera_plot.png" style="width:15em; height: 10pxem;" alt="Coursera Thumbnail">
                         <h3>Coursera Data Analytics</h3>
                         <p>Analyzed and visualized complex datasets using Pandas, NumPy, Matplotlib, Seaborn, and Plotly, while addressing data quality challenges like missing values and subdomain misclassification. Highlights data cleaning, EDA, and creating accessible, insightful visualizations to uncover trends.</p>
-                        <p>Note: Plots will also be turned into a Tableau dashboard.</p>
                         <a href="https://github.com/Saikeertanagubbala/online-course-analysis" target="_blank">GitHub</a>
                     </div>
                     <div class="project-item">
+                        <img src="Automation.svg" style="width:15em; height:9.5em;" alt="Chatbot Thumbnail">
+                        <h3>Automated Python Script</h3>
+                        <p>Allows for all transcripts collected during participant sessions to be split based on who was typing and then be turned to a CSV file. Done as a part of Department of Media and Information's Chatbot Experiment.</p>
+                        <a href="https://github.com/Saikeertanagubbala/automation-script" target="_blank">GitHub</a>  
+                    </div>
+                    <!-- <div class="project-item">
                         <h3>Machine Learning Models</h3>
                         <p>A comprehensive machine learning repository demonstrating practical applications of regression, clustering, classification, PCA, and SVM techniques on stroke prediction data, providing insights into risk factors while showcasing implementation of multiple analytical approaches.</p>
                         <p>Note: In Progress.</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -53,37 +58,37 @@
             <div class="projects-container">
                 <div class="projects-grid" id="ux-ui">
                     <div class="project-item">
-                        <img src="Sustainable.png" style="width:5em; height:10em;" alt="Bangladesh sustainability Thumbnail">
+                        <img src="Sustainable.png" style="width:5em; height:7em;" alt="Bangladesh sustainability Thumbnail">
                         <h3>Sustainable Technology Solutions</h3>
                         <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
                         <a href="Final Presentation.pdf" target="_blank">Presentation</a>
                     </div>
                     <div class="project-item">
-                        <img src="notion.jpg" alt="Degree Navigator Thumbnail">
+                        <img src="notion.jpg" style="width:15em;height:8.5em;" alt="Degree Navigator Thumbnail">
                         <h3>Degree Navigator</h3>
                         <p>Interactive college credit planner created in Notion. Allows you to track your courses, credits, and progress across 4 years for your major or minor with comprehensive view, customizable fields and more. Gained <strong>500+ downloads</strong> and 15 five-star reviews.</p>
                         <a href="https://kgubbala.notion.site/Degree-Navigator-15d01a3e6800800884f9e86cea0d125d?pvs=4" target="_blank">Notion Template</a>
                     </div>
                     <div class="project-item">
-                        <img src="Cox3 mockup.jpg" style="width:15em; height:10em;" alt="Mockup">
+                        <img src="Cox3 mockup.jpg" style="width:15em; height:8.5em;" alt="Mockup">
                         <h3>Co-x3 Product Mockups</h3>
                         <p>Created polished product demos for a non-profit’s e-commerce site, enhancing brand identity and visual appeal. Conducted market research, staged products for compelling demo images, and designed multiple mockup options in Figma.</p>
                         <a href="https://www.figma.com/design/A51bcSYu5AVwh0SaaIO2Cl/Design-Ideas?node-id=0-1&t=SznbBGgSlKm2r5wX-1" target="_blank">Figma</a>
                     </div>
                     <div class="project-item">
-                        <img src="e-commerce.png" style="width:15em; height:10em;" alt="e-commerce thumbnail">
+                        <img src="e-commerce.png" style="width:15em; height:8.5em;" alt="e-commerce thumbnail">
                         <h3>Co-x3 E-commerce Website</h3>
                         <p>Assisted in designing and developing an e-commerce platform on Zoho Commerce to showcase products and support revenue generation for a non-profit. Contributed to enhancing interactivity by working with custom code and refining the user experience.</p>
                         <a href="https://shop.x3.family/" target="_blank">Link to Website</a>
                     </div>
                     <div class="project-item">
-                        <img src="Access card.png" style="width:5em; height:10em;" alt="e-commerce thumbnail">
+                        <img src="Access card.png" style="width:5em; height:8.5em;" alt="e-commerce thumbnail">
                         <h3>Spartan One</h3>
                         <p>Collaborated on digitizing MSU student IDs via a mobile app, enabling NFC/RFID-based campus access. Worked with university personnel to gather technical details and developed a Figma prototype with features like temporary keycard requests.</p>
                         <a href="https://www.figma.com/design/8BWMaJa0QovACrQak6Vur1/ESHP-491---Spartan-One?node-id=1-15&t=YznklpzxTpB6hhSE-1" target="_blank">Figma</a>
                     </div>
                     <div class="project-item">
-                        <img src="Athlead.png" style="width:5em; height:10em;" alt="Athlead thumbnail">
+                        <img src="Athlead.png" style="width:5em; height:8.5em;" alt="Athlead thumbnail">
                         <h3>Athlead</h3>
                         <p>Athlead is a mobile platform that streamlines the college recruiting process by connecting high school athletes directly with coaches while providing performance stats and academic metrics to simplify college sports recruitment.</p>
                         <a href="https://www.figma.com/proto/9IlDpUtA0psIEB6IyUyAqT/Athlead?node-id=0-1&t=3z7RUV6k1CIDFzRu-1" target="_blank">Figma Prototype</a>
@@ -97,7 +102,6 @@
             <div class="projects-container">
                 <div class="projects-grid" id="web-development">
                     <div class="project-item">
-                        <img src="polaroid.png" style="width:10em; height:10em;" alt="Polaroid Thumbnail">
                         <h3>Polaroid Camera Creation</h3>
                         <p>Part of a project in Advanced Web Development class that challenged students to recreate complex imagery using pure HTML/CSS/JavaScript, implementing responsive design principles through Eleventy static site generator and establishing a continuous deployment with Netlify.</p>
                         <a href="https://polaroid-camera-creation.netlify.app/" target="_blank">Link</a>
@@ -106,16 +110,6 @@
                         <h3>C++ Image Processing CLI Tool</h3>
                         <p>Developed a C++ command-line image processing tool that applies transformations like grayscale, blur, and compression to .ppm images using vector operations and file handling.</p>
                         <a href="https://github.com/Saikeertanagubbala/ppm-converter" target="_blank">Github</a>
-                    </div>
-                    <div class="project-item">
-                        <img src="LockedIn.png" style="width:15em; height:10em;" alt="LockedIn Thumbnail">
-                        <h3>LockedIn</h3>
-                        <p>LockedIn is a web application designed to help students find study partners and collaborators based on their academic interests, availability, and profiles. By connecting students with similar needs, LockedIn aims to foster collaboration and improve the learning experience in a university environment.</p>
-                    </div>
-                    <div class="project-item">
-                        <img src="maizeplanner.png" style="width:15em; height:10em;" alt="maizeplanner Thumbnail">
-                        <h3>Maize Planner</h3>
-                        <p>MaizePlanner is a user-friendly schedule-building tool for UMich students, designed to offer a more visually appealing and intuitive alternative to Wolverine Access and Atlas. Built with the MERN stack, it features semester selection, course search, and a dynamic visualized schedule, making class planning simpler and more organized.</p>
                     </div>
                 </div>
             </div>
